# ros_dude_gazebo

./: CMakeLists.txt  README.md  package.xml
launch/: dude_world.launch  empty_world.launch
launch/accessories/: laser_scan.launch
urdf/: description.gazebo.xacro  dude.gazebo.xacro  xtion_camera.gazebo.xacro
urdf/accessories/: asus_xtion_pro.gazebo.xacro  imu.gazebo.xacro
worlds/: Kitchen.world  cafe.world  dude.world  willow_garage.world
