<?xml version="1.0"?>
<package>
  <name>ros_dude_gazebo</name>
  <version>0.0.1</version>
  <description>
	This is the configuration package for the robot 4UDE in Gazebo simulator.
  </description>
  
  <maintainer email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</maintainer>

  <license>BSD</license>
  <url type="website">http://raffaello.officinerobotiche.it</url>
  <url type="bugtracker">https://github.com/rbonghi/ros_dude_gazebo/issues</url>
  <url type="repository">https://github.com/rbonghi/ros_dude_gazebo</url>
  <author email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ros_dude_description</run_depend>
  <run_depend>gazebo_ros</run_depend> 

</package>
